# Smal

./: CMakeLists.txt  README.md  build.bat  build.sh  main.c
benchmarks/: CMakeLists.txt  benchmark_performance.c
cmake/: SmallDataStructuresConfig.cmake.in
examples/: CMakeLists.txt  example_advanced.c  example_basic.c  example_math.c  example_strings.c
include/: small_vec.h
tests/: CMakeLists.txt  test_comprehensive.c  test_performance.c  test_small_vec.c
